2012-09-26  Dinu Jacob  <dinu.s.jacob@intel.com>

        Unreviewed. Adding myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2012-09-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove color codes characters from run-gtk-tests output when not writing to a TTY
        https://bugs.webkit.org/show_bug.cgi?id=97660

        Reviewed by Philippe Normand.

        Remove also the '\r' characters returned by TTY output to try to fix
        the double line endings of the script output in the bots.

        * Scripts/run-gtk-tests:
        (TestRunner.__init__): Compile a regexp for color codes if stdout
        it not a TTY.
        (TestRunner._run_test_command.parse_line): Remove color codes and
        '\r' characters from the line returned by the pseudo-terminal if
        stdout is not a TTY.
        * gtk/common.py:
        (parse_output_lines): Fix the last chunk check to make sure we
        always send entire lines to the callback, otherwise color codes
        regexp might fail if the line is not complete.

2012-09-25  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [DRT][WTR] Support overriding the 'WebKitDisplayImagesKey' preference
        https://bugs.webkit.org/show_bug.cgi?id=96883

        Reviewed by Kenneth Rohde Christiansen.

        * DumpRenderTree/efl/TestRunnerEfl.cpp:
        (TestRunner::overridePreference): Support the
        'WebKitDisplayImagesKey' preference.

2012-09-26  Zan Dobersek  <zandobersek@gmail.com>

        [GTK] Enable some of the unstable CSS features
        https://bugs.webkit.org/show_bug.cgi?id=97572

        Reviewed by Martin Robinson.

        Enable the <style scoped> support via DumpRenderTreeSupportGtk method
        whenever resetting defualts to consistent values.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

2012-09-26  Zan Dobersek  <zandobersek@gmail.com>
